[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
dotenv = "0.15.0"
mongodb = { version = "2.3.1", default-features = false, features = ["sync"] }
serde = { version = "1.0.152", features = ["derive"] }
